--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,10 +6,13 @@ on:
       release:
         type: choice
         description: Release type
+        required: true
+        default: none
         options:
           - none
           - pre-release
           - release
+
 
 # env:
 #   SCCACHE_CACHE_SIZE: 1G
@@ -17,7 +20,18 @@ on:
 
 jobs:
     build:
+      name: Build ${{ matrix.config.arch }} ${{ matrix.config.os }}-${{ matrix.config.version }} Package
       runs-on: ubuntu-22.04
+      strategy:
+        fail-fast: ${{ github.event.inputs.release == 'none' }}
+        matrix:
+          config:
+            - { arch: linux/arm64 , os: ubuntu , version: jammy}
+            - { arch: linux/arm64 , os: debian , version: bookworm}
+            - { arch: linux/amd64 , os: ubuntu , version: jammy}
+            - { arch: linux/amd64 , os: debian , version: bookworm}
+            - { arch: linux/amd64 , os: centos , version: 7}
+
       steps:
         - name: Checkout
           uses: actions/checkout@v3
@@ -46,7 +60,7 @@ jobs:
         #   uses: mozilla-actions/sccache-action@v0.0.3
 
         - name: Get .config
-          run: curl -sSL https://raw.githubusercontent.com/BROBIRD/bbr-v3-pkg/docker-test/Debian-Vultr.config > bbr/.config
+          run: curl -sSL https://raw.githubusercontent.com/BROBIRD/bbr-v3-pkg/docker-test/.config > bbr/.config
 
         # - name: Setup cache
         #   uses: actions/cache@v3
@@ -71,30 +85,26 @@ jobs:
         #       CC="sccache gcc-13" \
         #       -j`nproc` \
         #       binrpm-pkg
-        
-        # - name: Upload config
-        #   uses: actions/upload-artifact@v3
-        #   with:
-        #     name: config
-        #     path: bbr/.config
 
-        - name: Build in Docker
+
+        - name: Build Debian
+          if: ${{ matrix.config.os == 'debian'}}
           uses: uraimo/run-on-arch-action@v2
-          id: build
+          id: debian
           with: 
             arch: none
             distro: none
-            base_image: --platform=linux/amd64 debian:bookworm-slim
+            base_image: --platform=${{ matrix.config.arch }} debian:${{ matrix.config.version }}-slim
             dockerRunArgs: |
               --volume "${PWD}/bbr:/root/bbr"
             shell: /bin/bash
             install: |
               apt-get update -q -y
               apt-get install -q -y build-essential \
-                bc kmod flex libncurses5-dev \
+                bc kmod cpio flex libncurses5-dev \
                 libelf-dev libssl-dev dwarves bison debhelper \
                 gawk openssl libssl-dev dkms libudev-dev \
-                libpci-dev libiberty-dev autoconf rsync cpio
+                libpci-dev libiberty-dev autoconf rsync rename
             run: |
               cd bbr
               export KDEB_COMPRESS="xz"
@@ -104,25 +114,99 @@ jobs:
               -j`nproc` \
               bindeb-pkg
               cp ../linux-*.deb ./
+              rename .deb .debian.deb *.deb
 
+        - name: Build Ubuntu
+          if: ${{ matrix.config.os == 'ubuntu'}}
+          uses: uraimo/run-on-arch-action@v2
+          id: ubuntu
+          with: 
+            arch: none
+            distro: none
+            base_image: --platform=${{ matrix.config.arch }} ubuntu:${{ matrix.config.version }}
+            dockerRunArgs: |
+              --volume "${PWD}/bbr:/root/bbr"
+            shell: /bin/bash
+            install: |
+              apt-get update -q -y
+              apt-get install -q -y build-essential \
+                bc kmod cpio flex libncurses5-dev \
+                libelf-dev libssl-dev dwarves bison debhelper \
+                gawk openssl libssl-dev dkms libudev-dev \
+                libpci-dev libiberty-dev autoconf rsync rename
+            run: |
+              cd bbr
+              export KDEB_COMPRESS="xz"
+              make olddefconfig
+              make prepare
+              make \
+              LOCALVERSION="" \
+              -j`nproc` \
+              bindeb-pkg
+              cp ../linux-*.deb ./
+              rename .deb .ubuntu.deb *.deb
+
+        - name: Build CentOS
+          if: ${{ matrix.config.os == 'centos'}}
+          uses: uraimo/run-on-arch-action@v2
+          id: centos
+          with: 
+            arch: none
+            distro: none
+            base_image: --platform=${{ matrix.config.arch }} centos:${{ matrix.config.version }}
+            dockerRunArgs: |
+              --volume "${PWD}/bbr:/root/bbr"
+            shell: /bin/bash
+            install: |
+              yum -y update
+              yum -y groupinstall "Development Tools"
+              yum -y install ncurses-devel hmaccalc zlib-devel \
+                binutils-devel elfutils-libelf-devel
+              yum -y bc gcc gcc-c++ ncurses cmake openssl-devel \
+                rpm-build redhat-rpm-config asciidoc \
+                perl-ExtUtils-Embed xmlto audit-libs-devel \
+                elfutils-devel newt-devel python-devel
+              yum -y install centos-release-scl
+              yum -y install devtoolset-11-gcc*
+              scl enable devtoolset-11 bash
+
+            run: |
+              cd bbr
+              export KDEB_COMPRESS="xz"
+              make olddefconfig
+              make prepare
+              make \
+              LOCALVERSION="" \
+              -j`nproc` \
+              binrpm-pkg
+              cp -r ../rpmbuild/ rpmbuild
+
+                
+        - name: Upload config
+          uses: actions/upload-artifact@v3
+          with:
+            name: config
+            path: bbr/.config      
         
         - name: Upload deb
+          if: ${{ matrix.config.os == 'debian' || matrix.config.os == 'ubuntu' }}
           uses: actions/upload-artifact@v3
           with:
             name: deb
             path: linux-*.deb
         
-        # - name: Upload rpm
-        #   uses: actions/upload-artifact@v3
-        #   with:
-        #     name: rpm
-        #     path: /home/runner/rpmbuild/RPMS/x86_64/*.rpm
+        - name: Upload rpm
+          if: ${{ matrix.config.os == 'centos' && matrix.config.arch == 'amd64'}}
+          uses: actions/upload-artifact@v3
+          with:
+            name: rpm
+            path: rpmbuild/RPMS/x86_64/*.rpm
 
         - name: Release
           if: ${{ github.event.inputs.release != 'none' }}
           uses: ncipollo/release-action@v1
           with:
-            artifacts: "linux-*.deb,/home/runner/rpmbuild/RPMS/x86_64/*.rpm"
+            artifacts: "linux-*.deb,rpmbuild/RPMS/x86_64/*.rpm"
             prerelease: ${{ github.event.inputs.release == 'pre-release' }}
             makeLatest: ${{ github.event.inputs.release == 'release' }}
             tag: ${{ steps.time.outputs.time }}
