--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -162,15 +162,20 @@ jobs:
               yum -y groupinstall "Development Tools"
               yum -y install ncurses-devel hmaccalc zlib-devel \
                 binutils-devel elfutils-libelf-devel
-              yum -y install bc gcc gcc-c++ ncurses cmake openssl-devel \
+              yum -y install bc ncurses cmake openssl-devel \
                 rpm-build redhat-rpm-config asciidoc \
                 perl-ExtUtils-Embed xmlto audit-libs-devel \
                 elfutils-devel newt-devel python-devel
-              yum -y install centos-release-scl
-              yum -y install devtoolset-11-gcc*
+              yum -y remove gcc gdb
+              yum -y install scl-utils centos-release-scl
+              yum -y install devtoolset-11-gcc* devtoolset-11-toolchain
               scl enable devtoolset-11 bash
 
             run: |
+              scl enable devtoolset-11 bash
+              echo 'PATH=$PATH::/opt/rh/devtoolset-11/root/usr/bin' >> /etc/profile
+              echo 'export PATH' >> /etc/profile
+              echo 'scl enable devtoolset-11 bash' >> /etc/profile
               cd bbr
               export KDEB_COMPRESS="xz"
               make olddefconfig
