--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,11 +26,11 @@ jobs:
         fail-fast: ${{ github.event.inputs.release == 'none' }}
         matrix:
           config:
-            - { arch: linux/arm64 , os: ubuntu , version: jammy}
-            - { arch: linux/arm64 , os: debian , version: bookworm}
+            # - { arch: linux/arm64 , os: ubuntu , version: jammy}
+            # - { arch: linux/arm64 , os: debian , version: bookworm}
             - { arch: linux/amd64 , os: ubuntu , version: jammy}
-            - { arch: linux/amd64 , os: debian , version: bookworm}
-            - { arch: linux/amd64 , os: centos , version: 7}
+            # - { arch: linux/amd64 , os: debian , version: bookworm}
+            # - { arch: linux/amd64 , os: centos , version: 7}
 
       steps:
         - name: Checkout
@@ -134,6 +134,17 @@ jobs:
                 libelf-dev libssl-dev dwarves bison debhelper \
                 gawk openssl libssl-dev dkms libudev-dev \
                 libpci-dev libiberty-dev autoconf rsync rename
+            # run: |
+            #   cd bbr
+            #   export KDEB_COMPRESS="xz"
+            #   make olddefconfig
+            #   make prepare
+            #   make \
+            #   LOCALVERSION="" \
+            #   -j`nproc` \
+            #   bindeb-pkg
+            #   cp ../linux-*.deb ./
+            #   rename .deb .ubuntu.deb *.deb
             run: |
               cd bbr
               export KDEB_COMPRESS="xz"
@@ -141,7 +152,6 @@ jobs:
               make prepare
               make \
               LOCALVERSION="" \
-              -j`nproc` \
               bindeb-pkg
               cp ../linux-*.deb ./
               rename .deb .ubuntu.deb *.deb
