--- a/.config
+++ b/.config
@@ -1184,7 +1184,7 @@ CONFIG_TCP_CONG_DCTCP=m
 CONFIG_TCP_CONG_CDG=m
 CONFIG_TCP_CONG_BBR=y
 # CONFIG_TCP_CONG_BBR1 is not set
-CONFIG_DEFAULT_CUBIC=m
+# CONFIG_DEFAULT_CUBIC is not set
 # CONFIG_DEFAULT_RENO is not set
 CONFIG_DEFAULT_TCP_CONG="bbr"
 CONFIG_TCP_MD5SIG=y
