--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -101,7 +101,7 @@ jobs:
             install: |
               apt-get update -q -y
               apt-get install -q -y build-essential \
-                bc kmod cpio flex libncurses5-dev \
+                bc kmod cpio flex libncurses5-dev liblz4-tool \
                 libelf-dev libssl-dev dwarves bison debhelper \
                 gawk openssl libssl-dev dkms libudev-dev \
                 libpci-dev libiberty-dev autoconf rsync rename
@@ -130,7 +130,7 @@ jobs:
             install: |
               apt-get update -q -y
               apt-get install -q -y build-essential \
-                bc kmod cpio flex libncurses5-dev \
+                bc kmod cpio flex libncurses5-dev liblz4-tool \
                 libelf-dev libssl-dev dwarves bison debhelper \
                 gawk openssl libssl-dev dkms libudev-dev \
                 libpci-dev libiberty-dev autoconf rsync rename
@@ -170,15 +170,15 @@ jobs:
             install: |
               yum -y update
               yum -y groupinstall "Development Tools"
-              yum -y install ncurses-devel hmaccalc zlib-devel \
-                binutils-devel elfutils-libelf-devel
-              yum -y install bc ncurses cmake openssl-devel \
+              yum -y remove gcc gdb
+              yum -y install epel-release ncurses-devel hmaccalc zlib-devel \
+                binutils-devel elfutils-libelf-devel \
+                bc ncurses cmake openssl-devel lz4 lz4-devel \
                 rpm-build redhat-rpm-config asciidoc \
                 perl-ExtUtils-Embed xmlto audit-libs-devel \
-                elfutils-devel newt-devel python-devel
-              yum -y remove gcc gdb
-              yum -y install scl-utils centos-release-scl
-              yum -y install devtoolset-11-gcc* devtoolset-11-toolchain
+                elfutils-devel newt-devel python-devel \
+                scl-utils centos-release-scl \
+                devtoolset-11-gcc* devtoolset-11-toolchain
               scl enable devtoolset-11 bash
 
             run: |
