--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,11 +40,11 @@ jobs:
             ref: v3
             path: bbr
 
-        - name: Get current time
-          id: time
-          run: |
-            sudo timedatectl set-timezone Asia/Shanghai
-            echo "time=$(date "+%Y-%m-%d-%H%M%S-%Z")" >> $GITHUB_OUTPUT
+        # - name: Get current time
+        #   id: time
+        #   run: |
+        #     sudo timedatectl set-timezone Asia/Shanghai
+        #     echo "time=$(date "+%Y-%m-%d-%H%M%S-%Z")" >> $GITHUB_OUTPUT
 
         # - name: Setup dependencies
         #   run: |
@@ -114,7 +114,7 @@ jobs:
               -j`nproc` \
               bindeb-pkg
               cp ../linux-*.deb ./
-              rename .deb .debian.deb *.deb
+              rename -v 's/\.deb/\.debian\.deb' *.deb
 
         - name: Build Ubuntu
           if: ${{ matrix.config.os == 'ubuntu'}}
@@ -134,17 +134,6 @@ jobs:
                 libelf-dev libssl-dev dwarves bison debhelper \
                 gawk openssl libssl-dev dkms libudev-dev \
                 libpci-dev libiberty-dev autoconf rsync rename
-            # run: |
-            #   cd bbr
-            #   export KDEB_COMPRESS="xz"
-            #   make olddefconfig
-            #   make prepare
-            #   make \
-            #   LOCALVERSION="" \
-            #   -j`nproc` \
-            #   bindeb-pkg
-            #   cp ../linux-*.deb ./
-            #   rename .deb .ubuntu.deb *.deb
             run: |
               cd bbr
               export KDEB_COMPRESS="xz"
@@ -152,9 +141,20 @@ jobs:
               make prepare
               make \
               LOCALVERSION="" \
+              -j`nproc` \
               bindeb-pkg
               cp ../linux-*.deb ./
-              rename '.deb' '.ubuntu.deb' *.deb
+              rename -v 's/\.deb/\.ubuntu\.deb' *.deb
+            # run: |
+            #   cd bbr
+            #   export KDEB_COMPRESS="xz"
+            #   make olddefconfig
+            #   make prepare
+            #   make \
+            #   LOCALVERSION="" \
+            #   bindeb-pkg
+            #   cp ../linux-*.deb ./
+            #   rename -v 's/\.deb/\.ubuntu\.deb' *.deb
 
         - name: Build CentOS
           if: ${{ matrix.config.os == 'centos'}}
@@ -225,5 +225,5 @@ jobs:
             artifacts: "linux-*.deb,rpmbuild/RPMS/x86_64/*.rpm"
             prerelease: ${{ github.event.inputs.release == 'pre-release' }}
             makeLatest: ${{ github.event.inputs.release == 'release' }}
-            tag: ${{ steps.time.outputs.time }}
+            tag: $GITHUB_RUN_ID
         
