--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
             # - { arch: linux/arm64 , os: debian , version: bookworm}
             - { arch: linux/amd64 , os: ubuntu , version: jammy}
             # - { arch: linux/amd64 , os: debian , version: bookworm}
-            # - { arch: linux/amd64 , os: centos , version: 7}
+            - { arch: linux/amd64 , os: centos , version: 7}
 
       steps:
         - name: Checkout
@@ -45,6 +45,14 @@ jobs:
         #   run: |
         #     sudo timedatectl set-timezone Asia/Shanghai
         #     echo "time=$(date "+%Y-%m-%d-%H%M%S-%Z")" >> $GITHUB_OUTPUT
+
+        - name: Get Workflow time
+          id: time
+          run: |
+            sudo apt-get install -y jq
+            sudo timedatectl set-timezone Asia/Shanghai
+            echo "time=`curl -s https://api.github.com/repos/BROBIRD/bbr-v3-pkg/actions/runs/$GITHUB_RUN_ID | jq '.run_started_at' | sed 's/["|Z]//g'| sed 's/T/\\ /g' |xargs -i date -d "{} +0000" +%Y-%m-%d-%H%M%S-%Z` >> $GITHUB_OUTPUT
+
 
         # - name: Setup dependencies
         #   run: |
@@ -114,7 +122,7 @@ jobs:
               -j`nproc` \
               bindeb-pkg
               cp ../linux-*.deb ./
-              rename -v 's/\.deb/\.debian\.deb' *.deb
+              rename -v 's/\.deb/\.debian\.deb/' *.deb
 
         - name: Build Ubuntu
           if: ${{ matrix.config.os == 'ubuntu'}}
@@ -144,7 +152,7 @@ jobs:
               -j`nproc` \
               bindeb-pkg
               cp ../linux-*.deb ./
-              rename -v 's/\.deb/\.ubuntu\.deb' *.deb
+              rename -v 's/\.deb/\.ubuntu\.deb/' *.deb
             # run: |
             #   cd bbr
             #   export KDEB_COMPRESS="xz"
@@ -225,5 +233,5 @@ jobs:
             artifacts: "linux-*.deb,rpmbuild/RPMS/x86_64/*.rpm"
             prerelease: ${{ github.event.inputs.release == 'pre-release' }}
             makeLatest: ${{ github.event.inputs.release == 'release' }}
-            tag: $GITHUB_RUN_ID
+            tag: ${{ steps.time.outputs.time }}
         
