--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -184,7 +184,7 @@ jobs:
                 perl-ExtUtils-Embed xmlto audit-libs-devel \
                 elfutils-devel newt-devel python-devel
               yum -y install scl-utils centos-release-scl
-              yum -y install devtoolset-11 devtoolset-11-gcc* devtoolset-11-toolchain
+              yum -y install devtoolset-11-gcc* devtoolset-11-toolchain
               scl enable devtoolset-11 bash
               echo "source /opt/rh/devtoolset-11/enable" >> /etc/bashrc
               echo 'PATH=$PATH::/opt/rh/devtoolset-11/root/usr/bin' >> /etc/profile
