--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -195,12 +195,12 @@ jobs:
             run: |
               cd bbr
               export KDEB_COMPRESS="xz"
-              export CC="/opt/rh/devtoolset-11/root/usr/bin/gcc"
-              export CPP="/opt/rh/devtoolset-11/root/usr/bin/cpp"
-              export CXX="/opt/rh/devtoolset-11/root/usr/bin/c++"
               make olddefconfig
               make prepare
               make \
+              CC="/opt/rh/devtoolset-11/root/usr/bin/gcc" \
+              CPP="/opt/rh/devtoolset-11/root/usr/bin/cpp" \
+              CXX="/opt/rh/devtoolset-11/root/usr/bin/c++" \
               LOCALVERSION="" \
               -j`nproc` \
               binrpm-pkg
