--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -185,22 +185,21 @@ jobs:
                 elfutils-devel newt-devel python-devel
               yum -y install scl-utils centos-release-scl
               yum -y install devtoolset-11-gcc* devtoolset-11-toolchain
-              scl enable devtoolset-11 bash
               source /opt/rh/devtoolset-11/enable
-              echo 'scl enable devtoolset-11 bash' >> /etc/profile
               echo "source /opt/rh/devtoolset-11/enable" >> /etc/bashrc
               export PATH="$PATH:/opt/rh/devtoolset-11/root/usr/bin"
+              # export CC="/opt/rh/devtoolset-11/root/usr/bin/gcc"
+              # export CPP="/opt/rh/devtoolset-11/root/usr/bin/cpp"
+              # export CXX="/opt/rh/devtoolset-11/root/usr/bin/c++"
               
 
             run: |
               cd bbr
               export KDEB_COMPRESS="xz"
+              source /opt/rh/devtoolset-11/enable
               make olddefconfig
               make prepare
               make \
-              CC="/opt/rh/devtoolset-11/root/usr/bin/gcc" \
-              CPP="/opt/rh/devtoolset-11/root/usr/bin/cpp" \
-              CXX="/opt/rh/devtoolset-11/root/usr/bin/c++" \
               LOCALVERSION="" \
               -j`nproc` \
               binrpm-pkg
