--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,10 +26,10 @@ jobs:
         fail-fast: ${{ github.event.inputs.release == 'none' }}
         matrix:
           config:
-            # - { arch: linux/arm64 , os: ubuntu , version: jammy}
-            # - { arch: linux/arm64 , os: debian , version: bookworm}
-            # - { arch: linux/amd64 , os: ubuntu , version: jammy}
-            # - { arch: linux/amd64 , os: debian , version: bookworm}
+            - { arch: linux/arm64 , os: ubuntu , version: jammy}
+            - { arch: linux/arm64 , os: debian , version: bookworm}
+            - { arch: linux/amd64 , os: ubuntu , version: jammy}
+            - { arch: linux/amd64 , os: debian , version: bookworm}
             - { arch: linux/amd64 , os: centos , version: 7}
 
       steps:
@@ -188,9 +188,6 @@ jobs:
               source /opt/rh/devtoolset-11/enable
               echo "source /opt/rh/devtoolset-11/enable" >> /etc/bashrc
               export PATH="$PATH:/opt/rh/devtoolset-11/root/usr/bin"
-              # export CC="/opt/rh/devtoolset-11/root/usr/bin/gcc"
-              # export CPP="/opt/rh/devtoolset-11/root/usr/bin/cpp"
-              # export CXX="/opt/rh/devtoolset-11/root/usr/bin/c++"
               
 
             run: |
@@ -223,7 +220,7 @@ jobs:
             path: linux-*.deb
         
         - name: Upload rpm
-          if: ${{ matrix.config.os == 'centos' && matrix.config.arch == 'amd64'}}
+          if: ${{ matrix.config.os == 'centos' && matrix.config.arch == 'linux/amd64'}}
           uses: actions/upload-artifact@v3
           with:
             name: rpm
