--- a/amd64.config
+++ b/amd64.config
@@ -701,7 +701,7 @@ CONFIG_KVM_XFER_TO_GUEST_WORK=y
 CONFIG_HAVE_KVM_PM_NOTIFIER=y
 CONFIG_KVM_GENERIC_HARDWARE_ENABLING=y
 CONFIG_VIRTUALIZATION=y
-CONFIG_KVM=m
+CONFIG_KVM=y
 CONFIG_KVM_WERROR=y
 CONFIG_KVM_INTEL=m
 CONFIG_X86_SGX_KVM=y
